--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,7 +66,8 @@ body {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  max-height: 400px;
+  max-height: 300px;
+  min-height: 370px;
   width: 100%;
   margin: auto;
   overflow: auto;
@@ -89,7 +90,7 @@ body {
 
 .msg.rcvd {
   border-radius: var(--rad-sm) var(--rad) var(--rad) var(--rad-sm);
-  background: #1CDAE5;
+  background: #1cdae5;
   color: #fff;
   /* moves it to the left */
   margin-right: auto;
