--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,16 +37,20 @@ body {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  height: 500px;
+  height:470px;
   width: 100%;
   margin: auto;
   overflow: auto;
   border-radius: 8px;
   border: 2px solid #00A0D5;
   @media (max-width: 768px) {
-    max-height: 500px;
-    min-height: 390px;
+    height: 500px;
   }
+  
+  @media (max-width: 375px) {
+    height: 320px;
+  }
+  
 }
 
 .msg {
