--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,18 +36,21 @@ body {
   font: 16px/1.5 sans-serif;
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  height:400px;
+  padding: 5px;
+  height: 100vh; 
   width: 100%;
-  margin: auto;
+  margin: 0;
   overflow: auto;
   border-radius: 6px;
   border: 2px solid #00A0D5;
   @media (max-width: 768px) {
     height: 410px;
   }
+  @media (max-width: 450px) {
+    height: 350px;
+  }
   @media (max-width: 389px) {
-    height: 345px;
+    height: 300px;
   }
  
   
