--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,9 @@ body {
   overflow: auto;
   border-radius: 6px;
   border: 2px solid #00A0D5;
+  @media (max-height: 750px) {
+    height: 320px;
+  }
   @media (max-height: 700px) {
     height: 300px;
   }
