--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,31 +43,25 @@ body {
   overflow: auto;
   border-radius: 6px;
   border: 2px solid #00A0D5;
-
   @media (max-height: 1200px) {
     height: 650px;
   }
-
   @media (max-height: 1000px) {
     height: 550px;
   }
   @media (max-height: 900px) {
-    height: 480px;
+    height: 490px;
   }
   @media (max-height: 800px) {
-    height: 410px;
+    height: 350px;
   }
   @media (max-height: 700px) {
     height: 300px;
-  }
-
-
- 
-  
-  
-  
+  } 
+  @media (max-height: 700px) {
+    height: 270px;
+  } 
 }
-
 .msg {
   position: relative;
   max-width: 75%;
