--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -68,7 +68,9 @@ body {
   padding: 7px 15px;
   margin-bottom: 2px;
 }
-
+.swiper-pagination-bullet {
+  background: #00A0D5;
+}
 .msg.sent {
   border-radius: var(--rad) var(--rad-sm) var(--rad) var(--rad);
   background: #001C25;
