--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,32 +37,40 @@ body {
   display: flex;
   flex-direction: column;
   padding: 5px;
-  height: 500px; 
+  height: 900px; 
   width: 100%;
   margin: 0;
   overflow: auto;
   border-radius: 6px;
   border: 2px solid #00A0D5;
-  @media (max-height: 750px) {
-    height: 340px;
+  @media (max-height: 1200px) {
+    height: 650px;
+  }
+  @media (max-height: 1000px) {
+    height: 550px;
+  }
+  @media (max-height: 900px) {
+    height: 490px;
+  }
+  @media (max-height: 800px) {
+    height: 350px;
   }
   @media (max-height: 700px) {
-    height: 330px;
-  }
-
- 
-  
-  
-  
+    height: 320px;
+  } 
+  @media (max-height: 650px) {
+    height: 290px;
+  } 
 }
-
 .msg {
   position: relative;
   max-width: 75%;
   padding: 7px 15px;
   margin-bottom: 2px;
 }
-
+.swiper-pagination-bullet {
+  background: #00A0D5;
+}
 .msg.sent {
   border-radius: var(--rad) var(--rad-sm) var(--rad) var(--rad);
   background: #001C25;
