--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,8 +30,8 @@ body {
   text-shadow: 0 0 10px #00A0D5, 0 0 1px #00A0D5;
 }
 .neon-dark {
-  color: #001C25;
-  text-shadow: 0 0 10px #001C25, 0 0 1px #001C25;
+  color: #1CDAE5;
+  text-shadow: 0 0 10px #1CDAE5, 0 0 1px #1CDAE5;
 }
 
 .chat {
