--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -210,3 +210,21 @@ body {
     scrollbar-width: none;     /* Firefox */
   }
 }
+
+
+/* VARIABLES PARA PAGINA SIN CONEXION A INTERNET  */
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(16px);}
+  to { opacity: 1; transform: translateY(0);}
+}
+.animate-fadeIn {
+  animation: fadeIn 0.7s cubic-bezier(0.2,0.8,0.2,1) both;
+}
+@keyframes bounce-slow {
+  0%, 100% { transform: translateY(0);}
+  50% { transform: translateY(-10px);}
+}
+.animate-bounce-slow {
+  animation: bounce-slow 2.5s infinite;
+}
