--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,10 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+
+/* 👇 Asegura que el fondo esté SIEMPRE aplicado */
+html {
+  background-color: var(--color-background-primary);
+}
+body {
+  background-color: var(--color-background-primary);
+  color: var(--color-text, #000); /* opcional */
+}
+
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
+  
+  --color-background-primary:#fefefefe;
+  --color-background-secondary:#f8f8f8fe;
+  --color-text-color:#151515fe;
+  --color-text-gray:#6B7280;
+  --color-chip-primary:#bfc7cf
+
+}
+
+.dark {
+  --color-background-primary:#0e252d;
+  --color-background-secondary:#102c36;
+  --color-text-color:#ffffffca;
+  --color-text-gray:#8a92a1;
+  --color-chip-primary:#dce2e7;
 }
 
 
