dark mode dialog traveler

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,7 +28,7 @@ body {
   --color-background-navbar:#fffffffe;
   --color-text-color:#151515fe;
   --color-text-colorI:#ffffffe1;
-  --color-text-gray:#656464;
+  --color-text-gray:#505050;
   --color-text-green:#16a34a;
   --color-text-gray-reverse:#49494a;
   --color-chip-primary:#d8dadd;
@@ -46,7 +46,7 @@ body {
   --color-background-navbar:#001C25;
   --color-background-modal:#223741;
   --color-background-card:#28424e;
-  --color-text-color:#dddddd;
+  --color-text-color:#e7e4e4;
   --color-text-colorI:#151515fe;
   --color-text-gray:#d6d6d6;
   --color-text-green:#54c47d;
