--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,7 +49,7 @@ body {
   --color-text-color:#e7e4e4;
   --color-text-colorI:#151515fe;
   --color-text-gray:#d6d6d6;
-  --color-text-green:#54c47d;
+  --color-text-green:#4ade80;;
   --color-text-gray-reverse:#cecece;
   --color-chip-primary:#dce2e7;
   --color-input:#1f2a30;
